--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,11 +19,11 @@
     <string name="skip">Skip</string>
     <string name="play_again">Play Again</string>
     <string name="you_scored">You Scored</string>
-    <string name="title_text">guess the word!</string>
+    <string name="title_text">Guess the Person !</string>
     <string name="play_button">Play</string>
     <string name="get_ready">Get ready to</string>
     <string name="got_it">Got it</string>
-    <string name="word_is">The word is…</string>
+    <string name="word_is">The person is…</string>
     <string name="quote_format">\"%s\"</string>
     <string name="score_format">Current Score: %d</string>
 </resources>
